# Panoramic_Camera

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
configs/: capture_640x480.yaml  capture_unrestricted_auto_exposure.yaml  demo.yaml
scripts/: bootstrap_conda.ps1  bootstrap_windows.ps1  download_unistitch_weights.py  register_orbbec_metadata.ps1
src/panorama_demo/: __init__.py  calibrated_remap.py  calibrated_rgb_pushbroom.py  capture_orbbec.py  central_strip.py  central_strip_diagnostic.py  config.py  dense_fusion.py  errors.py  foreground_segments.py  geometry_assisted_local_warp.py  geometry_pair_diagnostic.py  handoff_continuity.py  local_apap_flow.py  orbslam3_bridge.py  paths.py  photo_capture.py  quality.py  render.py  rgb_residual_alignment.py  rgbd_odometry.py  rgbd_projection.py  session.py  stitch_common.py  stitch_pair.py  stitch_sequence.py  synthetic.py  unistitch_adapter.py
tests/: test_calibrated_rgb_pushbroom.py  test_capture_calibration.py  test_central_strip.py  test_config.py  test_dense_fusion.py  test_foreground_segments.py  test_geometry_assisted_local_warp.py  test_geometry_pair_diagnostic.py  test_handoff_continuity.py  test_local_apap_flow.py  test_orbslam3_bridge.py  test_photo_capture.py  test_quality.py  test_render.py  test_rgb_residual_alignment.py  test_rgbd_odometry.py  test_rgbd_projection.py  test_sequence_delivery.py  test_sequence_integration.py  test_sequence_motion.py  test_session.py  test_synthetic.py  test_unistitch_layout.py
work/: build_project_book.py
work/explore-analytic-near/: manifest.json
work/explore-analytic-near-step2/: calibration.json  manifest.json
work/explore-synthetic-layered-geometry/: frames.csv  manifest.json
work/explore-synthetic-layered-step32/: manifest.json
