[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini305-rgbd-panorama"
version = "0.1.0"
description = "Fail-closed Gemini 305 RGB-D side-scan panorama pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "open3d>=0.19,<0.20",
    "opencv-python>=4.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
capture = ["pyorbbecsdk2>=2.1.1"]
test = ["pytest>=8.0"]
unistitch-diagnostic = [
    "kornia>=0.7",
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.scripts]
g305-capture = "panorama_demo.capture_orbbec:main"
g305-panorama = "panorama_demo.stitch_sequence:main"
g305-central-strip-diagnostic = "panorama_demo.central_strip_diagnostic:main"
unistitch-pair = "panorama_demo.stitch_pair:main"
unistitch-sequence = "panorama_demo.stitch_sequence:main"
generate-panorama-demo = "panorama_demo.synthetic:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
